# motivation-app

./: .gitignore  README.md  dummy.txt
.github/workflows/: deploy.yml
backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: index.html  script.js  style.css
